# getaround

./: .gitignore  LICENSE  Makefile  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
Data/: ._get_around_delay_analysis.csv  ._get_around_pricing_project.csv  get_around_delay_analysis.csv
docs/: Analysis-GetAround_Business_model.md  index.md
getaround/: Dockerfile  __init__.py  dataset.py  features.py  plots.py  requirements.txt
getaround/api/: Dockerfile  Dockerfile-local  README.md  app.py  build.sh  env.sh  getaround_api.py  requirements.txt  run.sh  secrets.sh
getaround/api/test/: test.py
getaround/app/: Dockerfile  README.md  app.py  requirements.txt
getaround/app/.streamlit/: config.tomlold
getaround/app/Data/: get_around_pricing_project.csv
getaround/modeling/: predict.py  train.py
models/: HistGradientBoostingRegressor_regression_model4.pkl  getaround_regressor0_model0.pkl  grid_search_cv_randomforest_regression_model3.pkl  grid_search_lasso_regression_model1.pkl
notebooks/: 01-Getaround_analysis.ipynb  01-Getaround_analysis_FR.ipynb  02_Getaround_eda.ipynb  03_Getaround_model_training.ipynb  model_training.ipynb
