[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "getaround"
version = "0.0.1"
description = "Projet d'\u00e9valuation des impacts de retard sur les locations de getaround."
authors = [{ name = "Francis Pradel", email = "francis.pradel@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["getaround"]
include = ["pyproject.toml", "getaround/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["getaround"]
force-sort-within-sections = true
